--- a/README
+++ b/README
@@ -1,59 +1,82 @@
-                        ESIO Build Procedure
-                    =============================
+                                The ESIO Library
+                                  Release 0.0.1
 
-0. Introduction
----------------
+Overview
 
-This document describes how to build ESIO from source code on
-Unix-like systems.
+   The ExaScale IO (ESIO) library provides simple, high throughput
+   input and output of structured data sets using parallel HDF5. ESIO is
+   designed to support reading and writing turbulence simulation restart
+   files but it may be useful in other contexts. The library is written
+   in C99 and may be used by C89+ or C++ applications. A Fortran API
+   built atop the F2003 standard ISO_C_BINDING is also available.
 
+   The ESIO library provides:
 
-1. Dependencies
----------------
+     * Distributed IO of 1D lines, 2D planes, and 3D fields of data
+     * Support for scalar-, complex-, and vector-valued data
+     * Single and double precision floating point storage
+     * A mechanism for storing both string and numeric metadata
+     * Support for contiguous and strided in-memory data
+     * Support to simplify writing restart file sequences
+     * Storage within the widely used HDF5 file format
 
-The code depends upon the following libraries:
+   The library's manual can be generated using Doxygen via the 'make docs'
+   target.  The manual contains full details on the following topics:
 
-    1) A working MPI stack present in your path
-    2) HDF5 built with MPI parallel capabilities
-    3) (OPTIONAL) GRVY, The Groovy Toolkit
+     * Installation
+     * Linking applications
+     * Basic concepts
+     * C/C++ API
+     * C/C++ error handling API
+     * Fortran API
+     * Restart files
+     * Benchmarking
+     * Buildbot test coverage
 
+   Brief licensing information, installation instructions, notable
+   changes, and authorship details can be found in COPYING, INSTALL,
+   NEWS, and AUTHORS respectively.
 
-2. Configuration
-----------------
+   Thank you for your interest in ESIO.
 
-If you have no `configure' script in the top level directory, run
-`bootstrap' to create one using GNU autoconf and automake.
+Reporting Bugs
 
-Before compiling ESIO, you need to run the provided `configure'
-script.  Generally, just `./configure' will work, but you may wish to
-provide more parameters.  Run `./configure --help' for details.
+   Bugs in the code and errors or omissions in the documentation can
+   be reported to Rhys Ulerich <rhys@ices.utexas.edu>. Requests and
+   contributions are welcome at the same e-mail address. All bug reports
+   should include:
 
-ESIO uses GNU Libtool in order to build shared libraries on a variety
-of systems.  While this is very nice for making usable binaries, it can
-be a pain when trying to debug a program.  For that reason, compilation
-of shared libraries can be turned off by specifying the --disable-shared
-option to configure.
+     * the version number of the ESIO library,
+     * the hardware and operating system,
+     * the local compiler version number,
+     * a description of the bug behavior, and ideally,
+     * a short program which reproduces the bug.
 
-3. Compilation
---------------
+License
 
-To compile ESIO after it has been configured, simply type 'make'.
+   Copyright (C) 2010 The PECOS Development Team
 
-After the compilation one or more ready-to-use executables should reside
-in the apps directory.  The library is built within the ESIO directory.
-Related documentation will be built in the doc
-subdirectory.
+   This library is free software; you can redistribute it and/or modify
+   it under the terms of the Version 2.1 GNU Lesser General Public
+   License as published by the Free Software Foundation.This library
+   is distributed in the hope that it will be useful, but WITHOUT ANY
+   WARRANTY; without even the implied warranty of MERCHANTABILITY or
+   FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
+   License for more details.
 
+Acknowledgments
 
-4. Testing
---------------
+   This material is based in part upon work supported by the Department
+   of Energy National Nuclear Security Administration under Award Number
+   DE-FC52-08NA28615.
 
-Unit tests can be compiled and run using 'make check'.  Note that many
-unit test are parallel in nature and depend on the availability of
-'mpiexec'.
+More Information about PECOS
 
-
-5. API documentation
---------------
-
-API documentation can be produced in docs by running 'make docs'.
+    The Center for Predictive Engineering and Computational Sciences
+    (PECOS) is one of five US centers sponsored under the Predictive
+    Science Academic Alliance Program (PSAAP) of the National Nuclear
+    Security Administration's Advanced Simulation and Computing
+    Program. The PECOS center is housed within the Institute for
+    Computational Engineering and Sciences (ICES) at the University of
+    Texas at Austin. For additional information or questions regarding
+    the PECOS center, please contact info@pecos.ices.utexas.edu.
