esio: #1260 point README/INSTALL to Doxygen
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16576 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/INSTALL
+++ b/INSTALL
@@ -1,67 +1,2 @@
-                                The ESIO Library
-                                  Installation
-
-   ESIO uses the GNU autotools suite (autoconf, automake, and libtool) for
-   its development build system.
-
-   This system is popular among the Linux development community and provides
-   a familiar build environment for end users.
-
-   To build ESIO starting from a release distribution, untar the distribution
-   and enter the top-level directory.
-
-  > tar xvfz esio-0.1.0.tar.gz
-  > cd esio-0.1.0/
-
-Configuration Requirements
-
-   HDF5 dependency: ESIO requires that the HDF5 library be available locally.
-   HDF5 must have been configured with both Fortran and MPI parallel support
-   (--enable-fortran and --enable-parallel, respectively). The same MPI stack
-   and Fortran compiler used to compile HDF5 should be used to build ESIO.
-
-   ESIO's configuration script should detect the appropriate information if
-   HDF5's h5pcc compiler wrapper is in your path. If your HDF5 installation
-   is not detected correctly, you may use ESIO's --with-hdf5 option to
-   specify a location.
-
-   ESIO can optionally use The Groovy Toolkit (GRVY) if it is detected at
-   configure time. If your GRVY installation is not detected correctly, you
-   may use ESIO's --with-grvy option to specify a location.
-
-   Installation Directory: Use the --prefix option to specify your desired
-   top-level installation directory for ESIO.
-
-Library Build
-
-   Once configured, issue a make to build the software. If successful, this
-   will build the ESIO library (static and dynamic versions), several
-   examples, and some additional ESIO-related utilities.
-
- > make
-
-   Please note that it is highly, highly improbable that anything besides
-   GNU Make will be able to build ESIO as the build system relies on
-   several GNU extensions.
-
-Build Verification (Optional)
-
-   To optionally verify that the software is working properly, a check
-   target is provided to run a suite of functionality tests against the
-   local build.  To run these tests, issue
-
- > make check
-
-   Many of the tests require your MPI installation's <code>mpiexec</code>
-   command to be usable and may not be usable on many public high
-   performance computing platform login nodes.
-
-Installation
-
-   After the build is complete, issue
-
-  > make install
-
-   to install the library. The installation will consist of three
-   top-level directories housing ESIO's include files, compiled libraries,
-   and utilities.
+See docs/html/index.html for ESIO's complete documentation, including
+installation instructions.
