esio: #1383 update NEWS for 0.1.3
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@17470 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+What's new in ESIO 0.1.3
+------------------------
+
+Showstopper build fixes for Intel 10.1
+
+This release contains the following
+
+    * Bug #1382: Intel 10.1.21 showstopper on buildbot for ESIO 0.1.2
+    * Support #1383: Roll ESIO 0.1.3 release
+
+
 What's new in ESIO 0.1.2
 ------------------------
 
