esio: #1423 update NEWS for 0.1.4
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@18033 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+What's new in ESIO 0.1.4
+------------------------
+
+Bugfixes for degenerate operations on some ranks
+
+This release contains the following
+
+    * Feature #1420: Add esio_handle_comm_{size,rank}()
+    * Support #1423: Roll ESIO 0.1.4 release
+    * Bug #1422: Zero sized dimension for non-unlimited dimension
+
+
 What's new in ESIO 0.1.3
 ------------------------
 
