esio: #1506 update NEWS for release
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@18654 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+What's new in ESIO 0.1.5
+------------------------
+
+Build and installation fixes
+
+This release contains the following
+
+    * Feature #637: Look into autoreconf for Suzerain, Esio
+    * Feature #1505: Create static ESIO libraries
+    * Support #1506: Roll ESIO 0.1.5 release
+    * Bug #1458: Version information not set on libesiof
+    * Bug #1459: -lesiof not a superset of -lesio
+    * Bug #1503: libesio.la lacks HDF5 dependencies
+
+
 What's new in ESIO 0.1.4
 ------------------------
 
