esio: add PECOS link to AUTHORS
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@25600 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-ESIO has been developed by The PECOS Development Team.  See the README file for
-more details on PECOS.  Major code contributors from PECOS include:
+ESIO has been developed by The PECOS Development Team.  See
+http://pecos.ices.utexas.edu/ for more details on PECOS.  Major code
+contributors from PECOS include:
 
   Rhys Ulerich <rhys@ices.utexas.edu>
   Nicholas Malaya <nick@ices.utexas.edu>
