Improve brief README link

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-See docs/html/index.html for ESIO's complete documentation.
+Please see https://red.ices.utexas.edu/projects/esio/wiki
+for additional background on ESIO, including complete documentation.
