Update doc link

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Please see https://red.ices.utexas.edu/projects/esio/wiki
+Please see https://rhysu.github.io/ESIO/
 for additional background on ESIO, including complete documentation.
