--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+What's new in ESIO 0.2.0-pre
+----------------------------
+
+Not release shape yet.  Final notes to be determined...
+
+    * Updated compilation/autotools workarounds for GNU libtool 2.4.6
+
+
 What's new in ESIO 0.1.9
 ------------------------
 
@@ -30,7 +38,7 @@ This release contains the following:
     * Feature #2777: Roll ESIO 0.1.8 Release
     * Support #2683: IBM XLF Internal Compiler Error
     * Support #2688: Workaround apparent lack of unlink instrinsic on XLF
-    * Bug #2673: Problems getting xlf to preprocess source files ending in .f90.
+    * Bug #2673: Problems getting XLF to preprocess source files ending in .f90.
     * Software Engineering #2674: Update license headers for 2013
 
 
