--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-karl     = Karl Schulz     <karl@ices.utexas.edu>
-nick     = Nicholas Malaya <nick@ices.utexas.edu>
-rhys     = Rhys Ulerich    <rhys.ulerich@gmail.com>
-topalian = Victor Topalian <topalian@ices.utexas.edu>
+dmcdougall = Damon McDougall <damon@ices.utexas.edu>
+karl       = Karl Schulz     <karl@ices.utexas.edu>
+nick       = Nicholas Malaya <nick@ices.utexas.edu>
+rhys       = Rhys Ulerich    <rhys.ulerich@gmail.com>
+topalian   = Victor Topalian <topalian@ices.utexas.edu>
